@@ -138,8 +138,8 @@ class WSGIServer(BaseSCGIServer, ThreadedServer):
         for key in ('jobClass', 'jobArgs'):
             if kw.has_key(key):
                 del kw[key]
-        ThreadedServer.__init__(self, jobClass=Connection, jobArgs=(self,),
-                                **kw)
+        ThreadedServer.__init__(self, jobClass=Connection,
+                                jobArgs=(self, None), **kw)
 
     def run(self):
         """
