@@ -97,7 +97,7 @@ class WSGIServer(BaseSCGIServer, PreforkServer):
     def __init__(self, application, scriptName=NoDefault, environ=None,
                  bindAddress=('localhost', 4000), umask=None,
                  allowedServers=None,
-                 loggingLevel=logging.INFO, debug=False, **kw):
+                 loggingLevel=logging.INFO, debug=False, timeout=None, **kw):
         """
         scriptName is the initial portion of the URL path that "belongs"
         to your application. It is used to determine PATH_INFO (which doesn't
@@ -137,7 +137,9 @@ class WSGIServer(BaseSCGIServer, PreforkServer):
         for key in ('multithreaded', 'multiprocess', 'jobClass', 'jobArgs'):
             if kw.has_key(key):
                 del kw[key]
-        PreforkServer.__init__(self, jobClass=Connection, jobArgs=(self,), **kw)
+        
+        PreforkServer.__init__(self, jobClass=Connection,
+                               jobArgs=(self, timeout), **kw)
 
     def run(self):
         """
